# matlab

./: .copier-answers.yml  .pre-commit-config.yaml  .renovaterc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lock-high.json  lock.json  pyproject.toml
.github/: SECURITY.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q&a.yaml  q-a.yaml  show-and-tell.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  feature-request.yaml  ideas-for-docs.yaml  internal.yaml
.github/workflows/: ci.yml  contrib.yml  docs.yml  high.yml
changelog/: towncrier_template.md.jinja
docs/: conf.py  contributing.md  index.md  installing-matlab.md  pyproject.toml
docs/pyxmatlab_docs/: docstrings.py  intersphinx.py  patch_nbs.py
requirements/: dev.in  sync.in  uv.in
scripts/: Sync-Py.ps1  pyproject.toml
scripts/matlab_python_interop_tools/: __main__.py
scripts/pyxmatlab_tools/: __main__.py  sync.py
src/matlab_python_interop/: __init__.py
src/pyxmatlab/: __init__.py
tests/: pyproject.toml
tests/matlab_python_interop_tests/: test_matlab_python_interop.py
tests/pyxmatlab_tests/: test_pyxmatlab.py
