[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "matlab_python_interop_tools"
version = "0.0.0"
description = "Tools."
dependencies = ["cyclopts==2.4.2"]
[project.scripts]
matlab_python_interop_tools = "matlab_python_interop_tools.__main__:main"

[tool.fawltydeps]
actions = ["check_undeclared"]
