[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "pyxmatlab_tools"
version = "0.0.0"
description = "Tools."
dependencies = [
    # ? Core script tools
    "copier==9.2.0",
    "cyclopts==2.6.1",
    "pipx==1.5.0",
]
[project.scripts]
"pyxmatlab_tools" = "pyxmatlab_tools.__main__:main"

[tool.fawltydeps]
deps = ["scripts/pyproject.toml"]
code = ["scripts/pyxmatlab_tools"]
ignore_undeclared = [
    "pyxmatlab_docs",
    "pyxmatlab_tests",
    "pyxmatlab_tools",
    "pyxmatlab",
]
ignore_unused = [
    # ? Core script tools
    "copier", # For template sync
    "pipx",   # For `pipx run` of scripts with dependencies isolated by PEP 723
]
